@@ -6,7 +6,10 @@
 	(w3m-session-select): Use w3m-get-buffer-create instead of
 	get-buffer-create to kill the session select buffer when quitting.
 
-	* w3m-util.el (w3m-replace-in-string): eval-and-compile.
+	* w3m-util.el (w3m-delete-frames-and-windows): Delete frames if the
+	other windows visit buffers being related to emacs-w3m or the session
+	select buffer.
+	(w3m-replace-in-string): eval-and-compile.
 
 2009-02-24  Katsumi Yamaoka  <yamaoka@jpl.org>
 
